jwt authentication example

--- a/DAY4 - Assignment/package.json
+++ b/DAY4 - Assignment/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --exit",
     "start_db": "nodemon server.js",
     "start_dev": "nodemon server3.js"
   },
@@ -21,6 +21,10 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "chai": "^4.3.4",
+    "expect": "^27.2.0",
+    "mocha": "^9.1.1",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.6"
   }
 }
